--- a/templates/inicio/board.html
+++ b/templates/inicio/board.html
@@ -27,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="/home/board/" class="brand"><i class="icon-leaf">Hub Médico</i></a>
+                    <a href="/home/board/" class="brand"><i class="icon-leaf">Hub Salud</i></a>
                     <div id="app-nav-top-bar" class="nav-collapse">
                         <ul class="nav">
 
