--- a/templates/pacientes/menu_perfil_datos.html
+++ b/templates/pacientes/menu_perfil_datos.html
@@ -1,12 +1,19 @@
-    
-      <ul class="nav navbar-nav">
-
-                                <li><a href="/paciente/perfilbasico">Mis Datos Personales</a>
-                                </li>
-                                <li><a href="/paciente/perfilbasico/contacto">Mis Datos de Contacto</a>
-                                </li>
-                                <li><a href="/paciente/perfilbasico/social">Mis Redes Sociales</a>
-                                </li>
                         
-                            </ul>
-                            
+  <div class="span8">
+      <div class="box">
+       <div class="box-content">
+            <a href=/home/perfilpublico/{{user.id}} target="blank"/>
+              <h4>Ir a tu perfil público</h4></a>
+          </div>
+          <div class="box-header">
+              <i class="icon-bookmark"></i>
+              <h5>Mi Perfil</h5>
+          </div>
+          <div class="box-content">
+              <div class="btn-group-box">
+                  <a href="/paciente/perfilbasico"><button class="btn"><i class="icon-user icon-large"></i><br>Mis Datos Personales</button></a>
+                  <a href="/paciente/perfilbasico/contacto"><button class="btn"><i class="icon-user icon-large"></i><br>Mis Datos de Contacto</button></a>
+                  <a href="/paciente/perfilbasico/social"><button class="btn"><i class="icon-user icon-large"></i><br>Mis Redes Sociales</button></a>
+              </div>
+          </div>
+      </div>
