--- a/estaticos/css/customize-template.css
+++ b/estaticos/css/customize-template.css
@@ -3873,11 +3873,11 @@ input[type="submit"].btn.btn-mini {
   padding-left: 20px;
   padding-right: 20px;
   background-color: #2e2e2e;
-  background-image: -moz-linear-gradient(top, #333333, #262626);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#262626));
-  background-image: -webkit-linear-gradient(top, #333333, #262626);
-  background-image: -o-linear-gradient(top, #333333, #262626);
-  background-image: linear-gradient(to bottom, #333333, #262626);
+  background-image: -moz-linear-gradient(top, #2C7B6F, #2C7B6F);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2C7B6F), to(#2C7B6F));
+  background-image: -webkit-linear-gradient(top, #2C7B6F, #2C7B6F);
+  background-image: -o-linear-gradient(top, #2C7B6F, #2C7B6F);
+  background-image: linear-gradient(to bottom, #2C7B6F, #2C7B6F);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff333333', endColorstr='#ff262626', GradientType=0);
   border: 1px solid #080808;
@@ -4215,8 +4215,8 @@ input[type="submit"].btn.btn-mini {
 .navbar .nav li.dropdown.open > .dropdown-toggle,
 .navbar .nav li.dropdown.active > .dropdown-toggle,
 .navbar .nav li.dropdown.open.active > .dropdown-toggle {
-  background-color: #1a1a1a;
-  color: #bbbbbb;
+  background-color: #2c7b6f;
+  color: #e1e1e1;
 }
 .navbar .nav li.dropdown > .dropdown-toggle .caret {
   border-top-color: #e1e1e1;
@@ -7732,9 +7732,9 @@ table.tablesorter .headerSortUp:after {
   height: 70px;
 }
 .body-nav.body-nav-horizontal ul li {
-  border-left: 1px solid #101f29;
-  border-right: 1px solid #101f29;
-  width: 80px;
+  border-left: 1px solid #4F6280;
+  border-right: 1px solid #4F6280;
+  width: 100px;
   float: left;
 }
 .body-nav.body-nav-horizontal ul li a,
@@ -7760,11 +7760,11 @@ table.tablesorter .headerSortUp:after {
 }
 .body-nav ul li {
   width: 100%;
-  border-bottom: 1px solid #101f29;
-  border-top: 1px solid #101f29;
+  border-bottom: 1px solid #4F6280;
+  border-top: 1px solid #4F6280;
 }
 .body-nav ul li.active {
-  background-color: #192f3e;
+  background-color: #4F6280;
   background-image: -moz-linear-gradient(top, #1f3a4d, #101f29);
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1f3a4d), to(#101f29));
   background-image: -webkit-linear-gradient(top, #1f3a4d, #101f29);
@@ -7795,7 +7795,7 @@ table.tablesorter .headerSortUp:after {
 }
 .body-nav ul li > a:hover,
 .body-nav ul li > button:hover {
-  background-color: #020304;
+  background-color: #4F6280;
   text-decoration: none;
 }
 html,
