--- a/templates/pacientes/menu_diario_medico.html
+++ b/templates/pacientes/menu_diario_medico.html
@@ -1,10 +1,17 @@
-<h1 class="page-header">Mi Diario Médico</h1>
-<p>
-<a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
-<a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
-<a href="{% url 'listar_peso_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
-<a href="{% url 'listar_ejercicio_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
-<a href="{% url 'listar_medicamento_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
-<a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
-<a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>  
-</p>
+  <div class="span8">
+      <div class="box">
+          <div class="box-header">
+              <i class="icon-bookmark"></i>
+              <h5>Mi Diario Médico</h5>
+          </div>
+          <div class="box-content">
+              <div class="btn-group-box">
+                  <a href="/home/"><button class="btn"><i class="icon-user icon-large"></i><br>Mis Síntomas</button></a>
+                  <a href="/home/contacto"><button class="btn"><i class="icon-users icon-large"></i><br>Mi estado de ánimo</button></a>
+                  <a href="/home/academico"><button class="btn"><i class="icon-book icon-large"></i><br>Mis mediciones médicas</button></a>
+                  <a href="/home/profesional/"><button class="btn"><i class="icon-tasks icon-large"></i><br>Mis rutinas de salud</button></a>
+                  <a href="/home/social"><button class="btn"><i class="icon-comments icon-large"></i><br>Mis citas</button></a>
+
+              </div>
+          </div>
+      </div>
