--- a/templates/pacientes/perfil/perfil_basico_contacto_form.html
+++ b/templates/pacientes/perfil/perfil_basico_contacto_form.html
@@ -1,3 +1,4 @@
+
 {% extends "pacientes/index.html" %}
 
 {% block title %}
@@ -5,44 +6,33 @@ Perfil - Básico
 {% endblock %}
 
 {% block content %}
-<br>
-<div class="navbar navbar-default">
-                    <div class="container">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                       
-                        </div>
-                        <div class="navbar-collapse collapse">
-                         {% include 'pacientes/menu_perfil_datos.html' %}
-                        </div>
-                        <!--/.nav-collapse -->
-                    </div>
-                </div>
+ {% include 'pacientes/menu_perfil_datos.html' %}
 <div class="row">
-  <div class="col-lg-3">
-    <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-user"></i> Mis Datos de Contacto</h3>
-                                 <br>
-                                 <a href="{% url 'perfil_principal_paciente' %}"><button type="button" class="btn btn-primary btn-xs">Ver Mi Perfil Público</button></a>
-                            </div>
-                            <div class="panel-body">
-                                 <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
+         <div class="span8">
+          <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h4 class="panel-title">
+                  <legend class="lead">
+                        Contactos
+                    </legend>
+                </h4>
+              </div>
+              <!-- Desplegable 1 -->
+              <div id="collapseOne" class="panel-collapse collapse in">
+                <div class="panel-body">
+
+             <form class="form-horizontal" method="POST">{% csrf_token %}
               {{ form.as_p }}
                  <input type="submit" value="Actualizar" class="btn btn-primary">
               </form>
-  </div>
-                               
-                            </div>
-
-   </div>
-
-
-</div><!-- /.row -->
-
+              </div>
+            </div>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+$('.collapse').collapse()
+</script>
 {% endblock %}
