--- a/estaticos/css/customize-template.css
+++ b/estaticos/css/customize-template.css
@@ -138,7 +138,7 @@ body {
   font-family: Arial, "Helvetica Neue", sans-serif;
   font-size: 16px;
   line-height: 20px;
-  color: #333333;
+  color: #185D7B;
   background-color: rgba(253, 253, 253, 0.06);
 }
 a {
@@ -1240,7 +1240,7 @@ legend {
   width: 100%;
   padding: 0;
   margin-bottom: 20px;
-  font-size: 21px;
+  font-size: 28px;
   line-height: 40px;
   color: #333333;
   border: 0;
@@ -1255,7 +1255,7 @@ input,
 button,
 select,
 textarea {
-  font-size: 14px;
+  font-size: 16px;
   font-weight: normal;
   line-height: 20px;
 }
@@ -8039,7 +8039,7 @@ body > #body-container {
   font-size: 14px;
   border: none;
   height: 70px;
-  width: 90px;
+  width: 200px;
   line-height: 22px;
   padding-top: 12px;
 }
