--- a/templates/inicio/actualizarpr_form.html
+++ b/templates/inicio/actualizarpr_form.html
@@ -6,7 +6,7 @@ Aplicaciones - Actualizar Preguntas
 
 {% block content %}
 <div class="row">
-    <div class="span8">
+    <div class="span9">
         <div class="box">
             <div class="box-content">
               <a href=/home/perfilpublico/{{user.id}} target="blank"/>
@@ -27,20 +27,7 @@ Aplicaciones - Actualizar Preguntas
                 </div>
             </div>
         </div>
-        <div class="box">
-
-            <div class="box-header">
-                <i class="icon-bookmark"></i>
-                <h5>Tus Aplicaciones</h5>
-            </div>
-            <div class="box-content">
-                <div class="btn-group-box">
-                    <a href=/home/consultas /><button class="btn"><i class="icon-pencil icon-large"></i><br>Preguntas</button></a>
-                    <a href="/blog/" target="_blank"><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
-                    <a href={% url 'ingresar_entrada_blog' %}><button class="btn"><i class="icon-tags icon-large"></i><br>Servicios</button></a>
-                </div>
-            </div>
-        </div>
+{% include 'inicio/menu_aplicaciones_medicos.html' %}
         <div class="box">
 
             <div class="box-header">
@@ -63,7 +50,7 @@ Aplicaciones - Actualizar Preguntas
             </div>
         </div>
     </div>
-        <div class="span8">
+        <div class="span7">
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
               <div class="panel-heading">
