--- a/templates/inicio/social.html
+++ b/templates/inicio/social.html
@@ -6,7 +6,7 @@ Perfil - Personal
 
 {% block content %}
 <div class="row">
-  <div class="span8">
+  <div class="span9">
       <div class="box">
           <div class="box-content">
             <a href=/home/perfilpublico/{{user.id}} target="blank"/>
@@ -27,22 +27,7 @@ Perfil - Personal
               </div>
           </div>
       </div>
-            <div class="box">
-
-          <div class="box-header">
-              <i class="icon-bookmark"></i>
-              <h5>Tus Aplicaciones</h5>
-          </div>
-          <div class="box-content">
-              <div class="btn-group-box">
-                  <ul class="nav nav-pills nav-stacked">
-                      <li><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
-                      <li><a href=/home/servicios/creacion>Tus servicios</a></li>
-                      <li><a href={% url 'ingresar_entrada_blog' %}>Blog</a></li>
-                   
-              </div>
-          </div>
-      </div>
+   {% include 'inicio/menu_aplicaciones_medicos.html' %}
       <div class="box">
           <div class="box pattern pattern-sandstone">
                     <div class="box-header">
@@ -68,7 +53,7 @@ Perfil - Personal
                 </div>
       </div>
   </div>
-        <div class="span8">
+        <div class="span7">
           <div class="panel-group" id="accordion">
             <div class="panel panel-default">
               <div class="panel-heading">
