--- a/templates/pacientes/index.html
+++ b/templates/pacientes/index.html
@@ -12,9 +12,20 @@
 
     <script type="text/javascript" src="http://www.google.com/jsapi"></script>
 
-    <script src="{{STATIC_URL}}js/jquery/jquery-1.8.2.min.js" type="text/javascript" ></script>
+
+   <!-- Jquery Charts CSS -->
+    <link href="{{STATIC_URL}}pacientes2/jquery/jquery-ui.css" rel="stylesheet">
+  
+
+    <!-- Custom Fonts -->
+    <link href="{{STATIC_URL}}pacientes2/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="{{STATIC_URL}}css/customize-template.css" type="text/css" media="screen, projection" rel="stylesheet" />
 <link rel="shortcut icon" href="{{MEDIA_URL}}images/registro_menu.png">
+  <!-- Jquery Charts CSS -->
+     <!-- Jquery Charts CSS -->
+<link href="{{STATIC_URL}}pacientes2/jquery/jquery-ui.css" rel="stylesheet">
+
+ 
     <style>
     </style>
 </head>
@@ -64,12 +75,12 @@
                         <div class="container">
                             <ul>
                                 <li>
-                                    <a href="/home/">
+                                    <a href="#">
                                         <i class="icon-home icon-large"></i> Mi Actividad
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="/home/pacientes/">
+                                    <a href={% url 'perfil_principal_paciente' %}>
                                         <i class="icon-user icon-large"></i> Mi Perfil
                                     </a>
                                 </li>
@@ -119,30 +130,26 @@
                 </div>
             </div>
         </footer>
+ <!-- jQuery Version 1.11.0 -->
+ 
+      
+    <!-- jQuery Version 1.11.0 -->
+    <script src="{{STATIC_URL}}pacientes2/js/jquery-1.11.0.js"></script>
 
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-transition.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-alert.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-modal.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-dropdown.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-scrollspy.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-tab.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-tooltip.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-popover.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-button.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-collapse.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-carousel.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-typeahead.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-affix.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/bootstrap/bootstrap-datepicker.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/jquery/jquery-tablesorter.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/jquery/jquery-chosen.js" type="text/javascript" ></script>
-        <script src="{{STATIC_URL}}js/jquery/virtual-tour.js" type="text/javascript" ></script>
-        <script type="text/javascript">
-        $(function() {
-            $('#sample-table').tablesorter();
-            $('#datepicker').datepicker();
-            $(".chosen").chosen();
-        });
-    </script>
+
+
+  
+
+
+     <!-- jQuery UI Version 1.11.2 -->
+    <script src="{{STATIC_URL}}pacientes2/jquery/jquery-ui.js"></script>
+        
+      
+       
+    <script>
+$( "#datePicker" ).datepicker({ dateFormat: 'dd/mm/yy' });
+$( "#datePicker2" ).datepicker({ dateFormat: 'dd/mm/yy' });
+$( ".selectMenu" ).selectmenu();
+</script>
     </body>
 </html>
