--- a/templates/pacientes/medicos_pacientes_fichas.html
+++ b/templates/pacientes/medicos_pacientes_fichas.html
@@ -7,81 +7,34 @@ Perfil - Personal
 {% block content %}
 <section class="page container">
             <div class="row">
-                <div class="span4">
-                    <div class="blockoff-right">
-                        <ul id="person-list" class="nav nav-list">
-                            <li class="nav-header">Tus Pacientes</li>
-                            <li class="active">
-                                <a id="view-all" href="#">
-                                    <i class="icon-chevron-right pull-right"></i>
-                                    <b>Todos</b>
-                                </a>
-                            </li>
-{% for paciente in paciente %}
-                                <li>
-                                
-                                    <a href="#Person-1">
-                                        <i class="icon-chevron-right pull-right"></i>
-                                        {{ paciente.nombres }} {{ paciente.apellidos }}
-                                    </a>
+                <div class="span12">
+                <div class="box pattern pattern-sandstone">
+                    <div class="box-header">
+                        <i class="icon-list"></i>
+                        <h5>Mis Pacientes</h5>
+                        <button class="btn btn-box-right" data-toggle="collapse" data-target=".box-list">
+                            <i class="icon-reorder"></i>
+                        </button>
+                    </div>
+                    <div class="box-content box-list in collapse" style="height: auto;">
+                        <ul>
+                        {% for paciente in paciente %}
+                            <li>
+                                <div>
+                                    <a href=/home/pacientes/ver/{{paciente.user.id}} class="news-item-title">{{ paciente.nombres }} {{ paciente.apellidos }}</a>
                                     
-                                </li>
- {% endfor %}
-
+                                </div>
+                            </li>
+                         {% endfor %} 
                         </ul>
+                      
+                       
                     </div>
-                </div>
-                <div class="span5">
-{% for paciente in paciente %}{% for contacto in contacto %}{% for social in social %}
-             <div class="span8">
-                        <div class="box">
-                            <div class="box-header">
-                                <i class="icon-user"></i>
-                                <h5> {{ paciente.nombres }} {{ paciente.apellidos }}</h5>
-                            </div>
-                            <div class="box-content">
-                            <div class="box"> 
-     <div class="box-content"> 
-      Extracto: <a>{{paciente.acerca_de}}</a>
-                            <br>
-                            Sexo: <a>{{paciente.sexo}}</a>
-                            <br>
-                            Grupo Sanguíneo: <a>{{paciente.grupo_sanguineo}}</a>
-                            <br>
-     </div> 
-</div> 
-                          <div class="box"> 
-     <div class="box-content"> 
-     Teléfono: <a>{{contacto.telefono}}</a>
-                            <br>
-                            Celular: <a>{{contacto.celular}}</a>
-                            <br>
-                            Correo: <a>{{contacto.correo}}</a>
-                            <br>
-     </div> 
-</div>
-                        <div class="box"> 
-     <div class="box-content"> 
-     Blog: <a>{{social.blog}}</a>
-                            <br>
-                            Twitter: <a>{{social.twitter}}</a>
-                            <br>
-                            Facebook: <a>{{social.facebook}}</a>
-                            <br>
-                            Linkedin: <a>{{social.linkedin}}</a>
-                            <br>
-                            YouTube: <a>{{social.you_tube}}</a>
-                            <br>
-     </div> 
-</div>
-                     
-                            </div>
-                        </div>
-                    </div>
-                    {% endfor %}{% endfor %}{% endfor %}
-              </div>
-            </div>
 
+                </div>
+            </div>
+              
+            </div>
         </section>
 <script type="text/javascript">
 $('#myTab a').click(function (e) {
