--- a/templates/pacientes/menu_perfil_datos.html
+++ b/templates/pacientes/menu_perfil_datos.html
@@ -1,8 +1,8 @@
                         
-  <div class="span8">
+  <div class="span9">
       <div class="box">
        <div class="box-content">
-            <a href=/home/perfilpublico/{{user.id}} target="blank"/>
+            <a href={% url 'perfil_principal_paciente' %} />
               <h4>Ir a tu perfil público</h4></a>
           </div>
           <div class="box-header">
@@ -12,8 +12,8 @@
           <div class="box-content">
               <div class="btn-group-box">
                   <a href="/paciente/perfilbasico"><button class="btn"><i class="icon-user icon-large"></i><br>Mis Datos Personales</button></a>
-                  <a href="/paciente/perfilbasico/contacto"><button class="btn"><i class="icon-user icon-large"></i><br>Mis Datos de Contacto</button></a>
-                  <a href="/paciente/perfilbasico/social"><button class="btn"><i class="icon-user icon-large"></i><br>Mis Redes Sociales</button></a>
+                  <a href="/paciente/perfilbasico/contacto"><button class="btn"><i class="icon-phone-sign icon-large"></i><br>Mis Datos de Contacto</button></a>
+                  <a href="/paciente/perfilbasico/social"><button class="btn"><i class="icon-comment icon-large"></i><br>Mis Redes Sociales</button></a>
               </div>
           </div>
       </div>
