--- a/templates/pacientes/estado_animo/mi_estado_animo_confirmar_delete_form.html
+++ b/templates/pacientes/estado_animo/mi_estado_animo_confirmar_delete_form.html
@@ -6,9 +6,10 @@ Diario Médico - Eliminar Estado de Ánimo
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
-  <div class="col-lg-12">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span8">
     <div class="panel panel-default">
                                <div class="panel-heading">
                              <h3 class="panel-title"> </h3>
@@ -42,6 +43,7 @@ Diario Médico - Eliminar Estado de Ánimo
   </div>
                                
                             </div>
+
 
    </div>
 
