--- a/templates/pacientes/estado_animo/mi_estado_animo_form.html
+++ b/templates/pacientes/estado_animo/mi_estado_animo_form.html
@@ -6,9 +6,10 @@ Diario Médico - Ingresar Estado de Ánimo
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
-  <div class="col-lg-12">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+  <div class="span6">
     <div class="panel panel-default">
                                <div class="panel-heading">
                              <h3 class="panel-title"> </h3>
@@ -19,7 +20,15 @@ Diario Médico - Ingresar Estado de Ánimo
                             <div class="col-lg-4">
                     <div class="well well-sm">
                     <div class="alert alert-info">
-                        <h5><label>Selecciona un estado de la lista: </label></h5></div>
+                        <h5><label>Nivel: 1 - 10 </label></h5>
+   
+ 
+<div id="slider-vertical" style="height:20px;width:320px"></div>
+<br>
+<p>
+  <label for="estado">Puntuación:</label>
+  <i class="fa fa-frown-o fa-2x"></i><input type="text" id="estado" readonly style="border:0; color:#f6931f; font-weight:bold; width:250px"><i class="fa fa-smile-o fa-2x"></i>
+</p>
                                      <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
               {{ form }}
               <p></p>
