--- a/templates/pacientes/medicionesclinicas/colesterol/mis_mediciones_clinicas_colesterol_listar_form.html
+++ b/templates/pacientes/medicionesclinicas/colesterol/mis_mediciones_clinicas_colesterol_listar_form.html
@@ -6,8 +6,10 @@ Diario Médico - Listar Colesterol
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
@@ -31,6 +33,7 @@ Diario Médico - Listar Colesterol
                                         <tr>
           
                                             <th>Colesterol</th>
+                                            <th>Hace</th>
                                          
                                         </tr>
                                     </thead>
@@ -38,6 +41,7 @@ Diario Médico - Listar Colesterol
                                     <tbody>
                                         <tr>
                                             <td>{{colesterol.colesterol_total}}</td>
+                                            <td>{{colesterol.timestamp|timesince}}</td>
                                              <td>
                                                  <a href={% url 'eliminar_colesterol_paciente' colesterol.id %}>Eliminar</a>
                                                
