--- a/templates/pacientes/medicionesclinicas/gluco/mis_mediciones_clinicas_gluco_listar_form.html
+++ b/templates/pacientes/medicionesclinicas/gluco/mis_mediciones_clinicas_gluco_listar_form.html
@@ -6,8 +6,10 @@ Diario Médico - Listar Glicemia
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
@@ -31,13 +33,14 @@ Diario Médico - Listar Glicemia
                                         <tr>
           
                                             <th>Glicemia</th>
-                                         
+                                            <th>Hace</th>
                                         </tr>
                                     </thead>
                                     {% for glicemia in object_list %}
                                     <tbody>
                                         <tr>
                                             <td>{{glicemia.medicion}}</td>
+                                            <td>{{glicemia.timestamp|timesince}}</td>
                                              <td>
                                                  <a href={% url 'eliminar_gluco_paciente' glicemia.id %}>Eliminar</a>
                                                
