--- a/templates/pacientes/medicionesclinicas/peso/mis_mediciones_clinicas_peso_form.html
+++ b/templates/pacientes/medicionesclinicas/peso/mis_mediciones_clinicas_peso_form.html
@@ -6,8 +6,11 @@ Diario Médico - Ingresar Peso
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+</p>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
@@ -18,7 +21,7 @@ Diario Médico - Ingresar Peso
                    
                             </div>
                             <div class="panel-body">
-                                         <div class="col-lg-3">
+                                         <div class="col-lg-6">
                     <div class="well well-sm">
                     <div class="alert alert-info">
                         <h5><label>Peso: </label></h5></div>
