--- a/templates/pacientes/medicionesclinicas/presion/mis_mediciones_clinicas_presion_confirmar_delete_form.html
+++ b/templates/pacientes/medicionesclinicas/presion/mis_mediciones_clinicas_presion_confirmar_delete_form.html
@@ -6,8 +6,10 @@ Diario Médico - Eliminar Presión Arterial
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
