--- a/templates/pacientes/medicionesclinicas/talla/mis_mediciones_clinicas_talla_form.html
+++ b/templates/pacientes/medicionesclinicas/talla/mis_mediciones_clinicas_talla_form.html
@@ -6,8 +6,11 @@ Diario Médico - Ingresar Talla
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+</p>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
