--- a/templates/pacientes/medicionesclinicas/talla/mis_mediciones_clinicas_talla_listar_form.html
+++ b/templates/pacientes/medicionesclinicas/talla/mis_mediciones_clinicas_talla_listar_form.html
@@ -6,8 +6,10 @@ Diario Médico - Listar Talla
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span12">
   <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
@@ -31,13 +33,14 @@ Diario Médico - Listar Talla
                                         <tr>
           
                                             <th>Talla</th>
-                                         
+                                            <th>Hace</th>
                                         </tr>
                                     </thead>
                                     {% for talla in object_list %}
                                     <tbody>
                                         <tr>
                                             <td>{{talla.altura}}</td>
+                                             <td>{{talla.timestamp|timesince}}</td>
                                              <td>
                                                  <a href={% url 'eliminar_talla_paciente' talla.id %}>Eliminar</a>
                                                
