--- a/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_form.html
+++ b/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_form.html
@@ -6,18 +6,19 @@ Diario Médico - Ingresar Síntomas
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
-</p>
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+</p>
+<div class="span10">
   <div class="col-lg-12">
-
     <div class="panel panel-default">
                             <div class="panel-heading">
                             {% include 'pacientes/menu_diario_medico_sintomas.html' %}
                                 
                             </div>
                             <div class="panel-body">	
-                            <div class="col-lg-6">
+                            <div class="col-lg-4">
                     <div class="well well-sm">
                     <div class="alert alert-info">
                         <h5><label>Selecciona un síntoma de la lista: </label></h5></div>
