--- a/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_listar_form.html
+++ b/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_listar_form.html
@@ -6,9 +6,10 @@ Diario Médico - Listar Síntomas
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
-
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span10">
   <div class="col-lg-12">
     <div class="panel panel-default">
                                    <div class="panel-heading">
@@ -19,7 +20,7 @@ Diario Médico - Listar Síntomas
             <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
-                           <a href="{% url 'ingresar_sintomas_alteracion_glicemica_paciente' %}"><h4><i class="fa fa-plus-square"></i> Adicionar síntoma</h4></a>
+                           <a href="{% url 'ingresar_sintomas_alteracion_glicemica_paciente' %}"><h4><i class="fa fa-plus-square"></i> Adicionar síntoma glicémico</h4></a>
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -29,13 +30,14 @@ Diario Médico - Listar Síntomas
                                         <tr>
           
                                             <th>Descripción del síntoma</th>
-                                         
+                                            <th>Hace</th>
                                         </tr>
                                     </thead>
                                     {% for sintomas in object_list %}
                                     <tbody>
                                         <tr>
                                             <td>{{sintomas.sintoma}}</td>
+                                             <td>{{sintomas.timestamp|timesince}}</td>
                                              <td>
                                                  <a href={% url 'eliminar_sintomas_alteracion_glicemica_paciente' sintomas.id %}>Eliminar</a>
                                                
