--- a/templates/pacientes/sintomas/mis_sintomas_form.html
+++ b/templates/pacientes/sintomas/mis_sintomas_form.html
@@ -6,9 +6,10 @@ Diario Médico - Ingresar Síntomas
 
 {% block content %}
 <br>
-{% include 'pacientes/menu_diario_medico.html' %}
-
 <div class="row">
+{% include 'pacientes/menu_diario_medico.html' %}
+</div>
+<div class="span10">
   <div class="col-lg-12">
     <div class="panel panel-default">
                                    <div class="panel-heading">
